<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.home.HomeFragment">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="700dp"
            app:layoutDescription="@xml/fragment_home_xml_constraintlayout_scene">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/pinkLight"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btn_addImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_img_add"
                        android:contentDescription="@string/image_button_profile"
                        android:scaleType="center"
                        android:src="@drawable/ic_outline_photo_camera_45"
                        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/icon_more"
                        android:src="@drawable/ic_baseline_add_24"
                        app:layout_constraintEnd_toEndOf="@+id/btn_addImage"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ImageContrastCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/lbl_add_photo"
                android:textColor="#B5000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/lbl_sub_add_photo"
                android:textColor="@color/greyLight"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_name"
                style="@style/BorderInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/home_lbl_name"
                android:textColorHint="#AE000000"
                app:counterEnabled="true"
                app:counterMaxLength="28"
                app:counterTextColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="#ff1744"
                app:helperText="@string/lbl_required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="#2196F3"
                app:hintTextAppearance="@style/titleEditext"
                app:hintTextColor="#EB000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:startIconDrawable="@drawable/ic_outline_person_outline_24"
                app:startIconTint="@color/pink">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_name"
                    style="@style/bodyEditext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="bottom"
                    android:maxLength="28"
                    android:textAppearance="@style/bodyEditext"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_group"
                style="@style/DropdownBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/formSpacing"
                android:hint="@string/home_lbl_group"
                android:textColorHint="#AE000000"
                app:helperText="@string/lbl_required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="#2196F3"
                app:hintTextAppearance="@style/titleEditext"
                app:hintTextColor="#EB000000"
                app:layout_constraintEnd_toEndOf="@+id/box_name"
                app:layout_constraintStart_toStartOf="@+id/box_name"
                app:layout_constraintTop_toBottomOf="@+id/box_name"
                app:startIconDrawable="@drawable/ic_baseline_attribution_24"
                app:startIconTint="@color/pink">

                <AutoCompleteTextView
                    android:id="@+id/txt_attribution"
                    style="@style/bodyEditext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="bottom"
                    android:textAppearance="@style/bodyEditext"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/lbl_boxPhone"
                style="@style/bodyEditext.lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/formSpacing"
                android:text="@string/home_lbl_country"
                app:layout_constraintEnd_toEndOf="@+id/box_group"
                app:layout_constraintStart_toStartOf="@+id/box_group"
                app:layout_constraintTop_toBottomOf="@+id/box_group" />

            <EditText
                android:id="@+id/box_phone"
                style="@style/bodyEditext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:hint="@string/home_txt_number"
                android:orientation="horizontal"
                android:textColorHint="#AE000000"
                app:hintTextAppearance="@style/titleEditext"
                app:hintTextColor="#EB000000"
                app:layout_constraintBottom_toBottomOf="@+id/box_codePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/box_codePicker"
                app:layout_constraintTop_toBottomOf="@+id/lbl_boxPhone"
                tools:ignore="TouchTargetSizeCheck" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/box_codePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:ccpDialog_backgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/lbl_boxPhone"
                app:layout_constraintTop_toBottomOf="@+id/lbl_boxPhone" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/greyLight"
                app:layout_constraintEnd_toEndOf="@+id/box_phone"
                app:layout_constraintStart_toStartOf="@+id/box_codePicker"
                app:layout_constraintTop_toBottomOf="@+id/box_phone" />

            <TextView
                android:id="@+id/textView3"
                style="@style/nunito_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/home_lbl_fields"
                app:layout_constraintEnd_toEndOf="@+id/box_phone"
                app:layout_constraintTop_toBottomOf="@+id/box_phone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_createAccount"
                style="@style/nunito_regular.btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/btn_create"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/box_codePicker"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </ScrollView>
</layout>
