<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.RootActivity">

        <nl.psdcompany.duonavigationdrawer.views.DuoMenuView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:tag="menu">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lbl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/drawer_lbl_title"
                    android:textAppearance="@style/drawerTtile"
                    android:textColor="#333333" />

                <SearchView
                    android:id="@+id/drawer_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lbl_title"
                    android:background="@color/black"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/drawer_search_hint" />

                <Button
                    android:id="@+id/btn_annul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/drawer_search"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:visibility="gone" />

                <!--                <androidx.recyclerview.widget.RecyclerView-->
                <!--                    android:id="@+id/myRecylerDrawer"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_below="@+id/btn_annul"-->
                <!--                    android:layout_marginTop="16dp"-->
                <!--                    tools:itemCount="5"-->
                <!--                    tools:listitem="@layout/item_user_contact" />-->

                <LinearLayout
                    android:id="@+id/actions_extras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="-1dp"
                    android:background="@drawable/bg_actions_extra"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:src="@drawable/ic_baseline_share_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Share"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_delete_outline_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Share"
                            android:textColor="@color/black" />
                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>

        </nl.psdcompany.duonavigationdrawer.views.DuoMenuView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:tag="content"
            android:visibility="visible">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:theme="@style/ToolBarStyle"
                app:menu="@menu/menu_setting"
                app:popupTheme="@style/MyPoopupToolbar"
                app:titleTextColor="@color/black" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph" />
        </LinearLayout>


    </nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout>
</layout>
